# gossiphs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  analyze_fn.py  pyproject.toml
.github/workflows/: cargo-test.yml  release-mcp.yaml  release-py.yaml  release.yaml
docs/: usage.md
eval/: benchmark.py  benchmark.sh  evaluate.py
examples/: mini.rs
mcp/: README.md  pyproject.toml
mcp/gossiphs_mcp/: cmd.py  server.py  tools.py
py_wrapper/examples/: hello.py  pagerank.py  repo2graph.py  repo2neo4j.py
py_wrapper/gossiphs/: __init__.py
py_wrapper/gossiphs_py/: __init__.py
src/: api.rs  cache.rs  extractor.rs  graph.rs  lib.rs  main.rs  pyapi.rs  rule.rs  server.rs  symbol.rs
