[package]
name = "gossiphs"
version = "0.9.15"
edition = "2021"
description = "A Rust lib for general code file relationship analysis. Based on tree-sitter and git analysis."
license = "Apache-2.0"
repository = "https://github.com/williamfzc/gossiphs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
serde_json = "1.0.115"
tracing-subscriber = "0.3.18"
cupido = { version = "0.3.5", features = ["vendored-openssl"] }
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.2"
petgraph = "0.6.4"
tree-sitter-typescript = "0.21.2"
tree-sitter-go = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-javascript = "0.21.4"
tree-sitter-java = "0.21.0"
tree-sitter-kotlin = "0.3.7"
tree-sitter-swift = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
indicatif = "0.17.8"
inquire = "0.7.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
lazy_static = "1.4.0"
rayon = "1.10"
git2 = "0.18.3"
termtree = "0.4.1"
csv = "1.3.0"
regex = "1.10.4"
rand = "0.8.4"
pyo3-stub-gen = "0.6.0"

[build-dependencies]
cc = "1.0.94"

[lib]
name = "gossiphs"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.21.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
