[project]
name = "gossiphs_mcp"
version = "0.1.0"
description = "gossiphs wrapper for model context protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gossiphs>=0.11.5",
    "mcp[cli]>=1.3.0",
]
license = { file="LICENSE" }

[project.scripts]
gossiphs-mcp = "gossiphs_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
