[project]
name = "gossiphs_mcp"
version = "0.1.1"
description = "gossiphs wrapper for model context protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "gossiphs>=0.11.5",
    "mcp[cli]>=1.3.0",
]
license = { file = "LICENSE" }

[project.scripts]
gossiphs-mcp = "gossiphs_mcp.cmd:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
